--- a/example_app/src/main/res/layout/activity_main.xml
+++ b/example_app/src/main/res/layout/activity_main.xml
@@ -17,19 +17,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/test"
+        android:id="@+id/queryContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="queryContent"
+        android:textAllCaps="false" />
 
     <Button
-        android:id="@+id/test1"
+        android:id="@+id/queryChildByPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="queryChildByPath"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/queryChildByName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="queryChildByName"
+        android:textAllCaps="false" />
+
+    <androidx.constraintlayout.helper.widget.Flow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="queryContent,queryChildByPath,queryChildByName"
+        app:flow_wrapMode="aligned"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
