--- a/source-core/src/main/res/layout/dir_source.xml
+++ b/source-core/src/main/res/layout/dir_source.xml
@@ -9,10 +9,12 @@
         android:id="@+id/breadCrumbs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        tools:text="src/main" />
+        android:textColor="#333"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:text="src > main" />
 
     <View
         android:layout_width="match_parent"
@@ -22,13 +24,8 @@
     <ListView
         android:id="@+id/childrenList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <com.bian.source.core.view.SourceViewer
-        android:id="@+id/sourceViewer"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        tools:listitem="@layout/item_list" />
 
     <TextView
         android:id="@+id/hint"
